@@ -1,7 +1,7 @@
 package uk.ac.ceh.gateway.catalogue.auth.oidc;
 
 import com.nimbusds.jose.jwk.source.JWKSource;
-import com.nimbusds.jose.jwk.source.RemoteJWKSet;
+import com.nimbusds.jose.jwk.source.JWKSourceBuilder;
 import com.nimbusds.jose.proc.SecurityContext;
 import lombok.SneakyThrows;
 import org.springframework.beans.factory.annotation.Value;
@@ -9,7 +9,7 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
 
-import java.net.URL;
+import java.net.URI;
 
 @Configuration
 @Profile("auth:datalabs")
@@ -20,6 +20,8 @@ public class OidcConfig {
     @Bean
     @SneakyThrows
     public JWKSource<SecurityContext> keySource() {
-        return new RemoteJWKSet<>(new URL(remoteJwks));
+        return JWKSourceBuilder
+            .create(new URI(remoteJwks).toURL())
+            .build();
     }
 }
